[tool.poetry]
name = "populations-of-locations"
version = "0.1.0"
description = "fetch populations of various locations"
authors = ["George Mauer <gmauer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
ipython = "^8.11.0"
Wikipedia-API = "^0.5.8"
spacy = "^3.5.1"
SPARQLWrapper = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
